--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -49,6 +49,9 @@
       {% if author.google_plus %}
         <li><a href="https://plus.google.com/+{{ author.google_plus }}"><i class="fab fa-fw fa-google-plus" aria-hidden="true"></i> Google+</a></li>
       {% endif %}
+      {% if author.semanticscholar %}
+        <li><a href="{{author.semanticscholar}}"><i class="fab fa-fw fa-researchgate" aria-hidden="true"></i>Semantic Scholar</a></li>
+      {% endif %}
       {% if author.linkedin %}
         <li><a href="https://www.linkedin.com/in/{{ author.linkedin }}"><i class="fab fa-fw fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
       {% endif %}
