--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -107,7 +107,7 @@
         <li><a href="{{ author.googlescholar }}"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
       {% endif %}
       {% if author.semanticscholar %}
-        <li><a href="{{author.semanticscholar}}"><i class="fab fa-fw fa-semanticscholar" aria-hidden="true"></i>Semantic Scholar</a></li>
+        <li><a href="{{author.semanticscholar}}"><i class="fab fa-fw fa-semantic-scholar-square" aria-hidden="true"></i>Semantic Scholar</a></li>
       {% endif %}
       {% if author.pubmed %}
         <li><a href="{{ author.pubmed }}"><i class="ai ai-pubmed-square ai-fw"></i> PubMed</a></li>
